k8s/01-namespace-config.yaml
# this is the first file where I will code the namespace config

# the application namespace
# learned a namespace is basically a folder for everything else, keeps this project's objects
# separated from anything else that might be running in the same cluster

apiVersion: v1
kind: Namespace
metadata:
  name: banking-app
  labels:
    name: banking-app

# this will be the global configmap the shared ennvironment variables
# a --- on its own line is how one yaml file holds multiple separate k8s objects, kubectl
# applies each document between the dashes as its own thing
